# openvm-eth

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  move_index  root_params.json  run.sh  rust-toolchain.toml  sweep_root.py
.cargo/: config.local.toml  config.template.toml  config.toml
.github/: benchmark-blocks.json
.github/scripts/: precompile_mix.py
.github/workflows/: build-server.yml  compare-bench.yml  compare-branches.yml  execution-spec-tests.yml  label-overrides.yml  pr.yml  reth-benchmark.yml  run-benchmark-v2.yml  tests-kzg.yml  tests-revm-crypto.yml  update-openvm.yml  update-patches.yml
benchmarks-dispatch/refs/heads/develop-new-hintstore/: reth-76d1f996a82e2fed1e6664824034ac9aa726d4c9-d80003e8aa33d5edddf2b28a8b1b9a4fd39ecfcdf24624906b470f47cb9a66b7.md
benchmarks-dispatch/refs/heads/develop-v2.0.0-rc.1/: reth-012131326e61aee3690ffd0219e273d91173c7bb-76b9410e337d8f9ebce2c8c170d2f12e35df8f04f40843c292fa5597b5d6933a-24190425439.md  reth-024f6b2d7f8d0950da772a80df17de0d50dbdfb7-1649b4e649653b9357e0c8f451cb54370c5bbd6bf5ad809557d9c8b0f3e308d1.md  reth-024f6b2d7f8d0950da772a80df17de0d50dbdfb7-80f398a34ed7b3af249f30ddeb3452f36247692b82e23e7118dd32824c837cb8.md  reth-06885a8180461b194ddde9c6f24fa78d321c8f9e-1780fbeb53e91a1f4f1ca001f69b2b7c48c41f8f0a0f7f84c56aa9e1d37a4cb8.md  reth-084f70de6cc632f102c6f2ae0843352bfcbb970a-ad9bb50b2694fac5c7d53eb0e1ba825f10bbf71c18c6a3a1b9c520278cde4434-25749015685.md  reth-084f70de6cc632f102c6f2ae0843352bfcbb970a-b757fe4b14ed9f566898a60b80a80a59e82203069ed2416d3363acea8b26db07-25753881919.md  reth-0bb49b84f27530a23ab2346ede3b4cbb5305d5f9-bbd0a602ecd5bff847e2838c2f26c2a246e5f148824e00f872313820614793b0.md  reth-0c89aaf7b980af606e4089e6cd46bc7601cf9b12-b757fe4b14ed9f566898a60b80a80a59e82203069ed2416d3363acea8b26db07-25958954583.md  reth-0c89aaf7b980af606e4089e6cd46bc7601cf9b12-f318020777d0e1428a92ca1930278ff91d374c16a6bc5e6544deced8866065a8-26152736015.md  reth-12204dc947f5ea2e3936c1a91ee363ea9111b23e-b757fe4b14ed9f566898a60b80a80a59e82203069ed2416d3363acea8b26db07-24457936402.md  reth-1daab46d9405d8fdcee2178bf3fffb5130923049-d26f922a2adb9dfcabbaf91cfb1f08de07d21869f8ee886a2ecf92af6d8a56a5.md  reth-1f79ba3570316a7ac56cc5ab7cf2805937a03fec-41cdc01ff214fc88503b0b4e50ebec3b9b384c244553aa350c673626d6432cde.md  reth-21252deef2897c29431964eddf21e69526f77040-68667cf271cea429ac9bd1b4dcc03bbcb0ecad7812f6f695c8f5316e7b3edb17.md  reth-2147cf2d40347591324d3181fda9c6298d0e7cac-97c99d5080ec2697630c9298bcb2a93291717a3660501ecab098aadad05ccf62.md  reth-227f7a2f50184b362cb49c687f7b52827f4df3b5-6002380fdbc8bec960aa56c87af2badb61e56c3b16d3432d86739ad2fd64d1f5.md  reth-2a58c2dfdc60d4df398487aed948e10901836d65-96f82c59ab12ac06907dbdb6540f448fc2d612c702a8b49a086f2f462a74dae7-25173377424.md  reth-2a94fe92dbe14776da3328f4f7a20a65491df5bb-c14615aa0214ae405562f74c1d9a3a953fa7de99b60667f952098c81ca9faf2b.md  reth-2c29e105b9b3013508d4dd4393283f90444aceee-dfdf1268a649d84fdfb7309892b26fc8a0269d1b000c80dcf8f4b75f0903d02a.md  reth-35068d6d866839161893ad9c22cd21e39c1ba05b-0383d38c72cc850082d6d960a8d5276bf8894892f687ab546b7ab32ce3048ccf.md  reth-3d6cd8b2c816a909a7dcba7089e2cba249d4d7b6-fb1ad4fa4a7fc47a2dbffe08b0a753a544e140165e146e9ee058249c70696a98-25178865219.md  reth-3e51cdd9eb48924aef98d14927cc7cee12377d6c-5d94138b121dbf128460aa1134a4cc2db7a8d730e35ff7bfd4161dc146d2dd19.md  reth-3eab98bd0a7933e84cc9aba520a26cda58095a20-cc5e547ab7419e3774dbb16480fccf5da45abd1a7047d7e2ddc7d3265e7f0a55.md  reth-42d340abe43926473b262d7ec1e4fc97aefaf9aa-b158856a6ef32327ddafc7b1efe1c15c215f781c32a8ba0b14b31ff92d630530.md  reth-436e0aae104c61ea798b756ddecac5f65a476c70-6e99a7889571d35b2ba6e07b597e0ae4b51cb8508611459efe119889db11ca30-25931043565.md  reth-47c91da64b9582e6474c85880ac94e6cf437522f-d3c1d607027a310dcc8f7e3f0b1fd634698d12554017d744dd821b0156fdefc9.md  reth-4b7c13233c3b17e3dd7462f8e52c5ab6fa6d9d66-26c3317728edf9144f41b715ed515b219bbe1425c5a628c635955ed7bcb44c40-25178865219.md  reth-4c622e0b08ab62bd23129b0ac5d091768dfd9375-19755dd4e8f6357ad95f1b0052b3598fdbbb00b5a173b378dca46b284fe7bd75.md  reth-50190c95da149aa0ce62aac6944a12bdde07d3af-68667cf271cea429ac9bd1b4dcc03bbcb0ecad7812f6f695c8f5316e7b3edb17.md  reth-548199e8d2ee89c0979a4b67ca71a57a524012a5-6bad8cf1259fb44c38fc81dfa889e0a61f8ece5eb87f75b740d68dabed97f90c-26525341289.md  reth-548199e8d2ee89c0979a4b67ca71a57a524012a5-6bad8cf1259fb44c38fc81dfa889e0a61f8ece5eb87f75b740d68dabed97f90c-26661556077.md  reth-548199e8d2ee89c0979a4b67ca71a57a524012a5-774cd9e22a23ca54ea16096f6eee945b821eff6ce0499142ce3644ecfef7b856-26519414097.md  (+67 more)
crates/chainspec/src/: lib.rs
crates/curve-utils/: Cargo.toml
crates/curve-utils/src/: lib.rs
crates/guest-keccak/: Cargo.toml
crates/guest-keccak/src/: lib.rs
crates/guest-keccak/tests/: differential.rs
crates/guest-mem/: Cargo.toml
crates/guest-mem/src/: lib.rs
crates/kzg/: Cargo.toml  README.md  build.rs
crates/kzg/src/: consts.rs  dtypes.rs  enums.rs  kzg_proof.rs  lib.rs  trusted_setup.rs  types.rs
crates/kzg/tests/: integration_tests.rs
crates/kzg/tests/programs/verify_kzg/: Cargo.toml  openvm.toml
crates/mpt/: Cargo.toml
crates/mpt-tools/: Cargo.toml
crates/mpt-tools/benches/: mpt_performance.rs
crates/mpt/src/: hp.rs  lib.rs  node.rs  resolver.rs  state.rs  tests.rs  trie.rs  witness.rs
crates/revm-crypto/: Cargo.toml
crates/revm-crypto/src/: k256.rs  lib.rs  subgroup_check.rs
crates/rpc-proxy/: Cargo.toml
crates/rpc-proxy/src/: execution.rs
crates/stateless-executor/: Cargo.toml
crates/stateless-executor/src/: error.rs  io.rs  lib.rs
crates/stateless-witness/: Cargo.toml
crates/stateless-witness/src/: error.rs  lib.rs
scripts/: clean_proof_metrics.sh  compare_openvm.sh  ethproofs_analyzer.py  generate-inputs-parallel.sh  gpu_driver_setup.sh  precompile_analyzer.py  symbolicate_profile.py
server/: prove_block.sh  requirements.txt
tests/execution-spec-tests/: Cargo.toml
tests/execution-spec-tests/src/: lib.rs
tests/execution-spec-tests/tests/: execution_spec_tests.rs
(+621 files in other folders)
