[workspace]
members = [
  "bin/reth-benchmark",
  "bin/reth-verify",
  "crates/mpt",
  "crates/revm-crypto",
  "crates/stateless-executor",
  "crates/chainspec",
  "crates/stateless-witness",
  "crates/mpt-tools",
  "crates/rpc-proxy",
]
exclude = []
resolver = "3"

[workspace.package]
version = "0.4.0"
repository = "https://github.com/axiom-crypto/openvm-eth"
homepage = "https://github.com/axiom-crypto/openvm-eth"
edition = "2024"
exclude = ["**/target"]

[workspace.dependencies]
# Not directly used, just to have rayon feature always
hashbrown = { version = "0.15.4", features = ["rayon"] }
eyre = "0.6"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
tokio = { version = "1.44.2", default-features = false, features = [
  "rt",
  "rt-multi-thread",
] }
serde_json = "1.0.110"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = "3.13.0"
url = "2.3"
thiserror = "2.0.12"
hex-literal = "1.0.0"
rayon = "1.10.0"
bincode = { version = "2.0.1", default-features = false, features = [
  "derive",
  "alloc",
  "serde",
] }
toml = "0.9.2"
smallvec = "1.13"
bumpalo = "3.19.0"
bytes = "1"
bitcode = { version = "0.6.5", default-features = false, features = ["serde"] }
itertools = "0.14"
actix-web = "4"
reqwest = "0.12.20"
tracing-actix-web = "0.7"
clap = "4.5.54"
tower = "0.5"
metrics = "0.24"
zstd = { version = "0.13", default-features = false }

# workspace
openvm-mpt = { path = "./crates/mpt" }
openvm-revm-crypto = { path = "./crates/revm-crypto" }
openvm-stateless-executor = { path = "./crates/stateless-executor" }
openvm-chainspec = { path = "./crates/chainspec" }
# workspace (host only)
openvm-stateless-witness = { path = "./crates/stateless-witness", default-features = false }
openvm-rpc-proxy = { path = "./crates/rpc-proxy" }
openvm-reth-benchmark = { path = "./bin/reth-benchmark", default-features = false }

# reth
reth-primitives-traits = { version = "=0.3.0", default-features = false }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }

# revm
revm = { version = "=38.0.0", features = ["serde"], default-features = false }
revm-primitives = { version = "=23.0.0", default-features = false }

# alloy
alloy-chains = { version = "=0.2.33", default-features = false }
alloy-json-rpc = { version = "=2.0.0", default-features = false }
alloy-primitives = { version = "=1.5.6", default-features = false }
alloy-rlp = { version = "=0.3.13", default-features = false, features = [
  "core-net",
] }
alloy-trie = { version = "=0.9.4", default-features = false }

alloy-hardforks = { version = "=0.4.7", default-features = false }

alloy = { version = "=2.0.0", default-features = false }
alloy-eips = { version = "=2.0.0", default-features = false }
alloy-consensus = { version = "=2.0.0", default-features = false }
alloy-provider = { version = "=2.0.0", default-features = false }
alloy-rpc-client = { version = "=2.0.0", default-features = false }
alloy-rpc-types = { version = "=2.0.0", default-features = false }
alloy-rpc-types-debug = { version = "=2.0.0", default-features = false }
alloy-transport = { version = "=2.0.0", default-features = false }
alloy-transport-http = { version = "=2.0.0", default-features = false, features = [
  "reqwest-rustls-tls",
] }

openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-verify-stark-host = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-keccak256 = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false, features = [
  "bn254",
  "bls12_381",
] }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256", branch = "develop-v2.0.0-rc.1" }
openvm-p256 = { git = "https://github.com/openvm-org/openvm.git", package = "p256", branch = "develop-v2.0.0-rc.1" }

openvm-kzg = { git = "https://github.com/axiom-crypto/openvm-kzg.git", branch = "develop-v2.0.0-rc.1", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", branch = "develop-v2", default-features = false }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[profile.release]
lto = "thin"

[profile.profiling]
inherits = "maxperf"
debug = "full"
strip = "none"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3

# Profile with debugging symbols for memory profiling
[profile.bench-with-debug]
inherits = "release"
debug = 1

[patch."https://github.com/openvm-org/stark-backend.git"]
openvm-codec-derive = { git = "https://github.com/Aalanli/stark-backend", branch = "no_bn254_root" }
openvm-cpu-backend = { git = "https://github.com/Aalanli/stark-backend", branch = "no_bn254_root" }
openvm-cuda-backend = { git = "https://github.com/Aalanli/stark-backend", branch = "no_bn254_root" }
openvm-cuda-builder = { git = "https://github.com/Aalanli/stark-backend", branch = "no_bn254_root" }
openvm-cuda-common = { git = "https://github.com/Aalanli/stark-backend", branch = "no_bn254_root" }
openvm-stark-backend = { git = "https://github.com/Aalanli/stark-backend", branch = "no_bn254_root" }
openvm-stark-sdk = { git = "https://github.com/Aalanli/stark-backend", branch = "no_bn254_root" }

# [patch."https://github.com/openvm-org/openvm.git"]
# k256 = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/guest-libs/k256" }
# openvm = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/toolchain/openvm" }
# openvm-algebra-circuit = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/algebra/circuit" }
# openvm-algebra-complex-macros = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/algebra/complex-macros" }
# openvm-algebra-guest = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/algebra/guest" }
# openvm-algebra-moduli-macros = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/algebra/moduli-macros" }
# openvm-algebra-transpiler = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/algebra/transpiler" }
# openvm-bigint-circuit = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/bigint/circuit" }
# openvm-bigint-guest = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/bigint/guest" }
# openvm-bigint-transpiler = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/bigint/transpiler" }
# openvm-build = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/toolchain/build" }
# openvm-circuit = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/vm" }
# openvm-circuit-derive = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/vm/derive" }
# openvm-circuit-primitives = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/circuits/primitives" }
# openvm-circuit-primitives-derive = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/circuits/primitives/derive" }
# openvm-continuations = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/continuations" }
# openvm-custom-insn = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/toolchain/custom_insn" }
# openvm-deferral-circuit = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/deferral/circuit" }
# openvm-deferral-guest = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/deferral/guest" }
# openvm-deferral-transpiler = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/deferral/transpiler" }
# openvm-ecc-circuit = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/ecc/circuit" }
# openvm-ecc-guest = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/ecc/guest" }
# openvm-ecc-sw-macros = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/ecc/sw-macros" }
# openvm-ecc-transpiler = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/ecc/transpiler" }
# openvm-instructions = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/toolchain/instructions" }
# openvm-instructions-derive = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/toolchain/instructions/derive" }
# openvm-keccak256 = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/guest-libs/keccak256" }
# openvm-keccak256-circuit = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/keccak256/circuit" }
# openvm-keccak256-guest = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/keccak256/guest" }
# openvm-keccak256-transpiler = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/keccak256/transpiler" }
# openvm-macros-common = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/toolchain/macros" }
# openvm-mod-circuit-builder = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/circuits/mod-builder" }
# openvm-pairing = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/guest-libs/pairing" }
# openvm-pairing-circuit = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/pairing/circuit" }
# openvm-pairing-guest = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/pairing/guest" }
# openvm-pairing-transpiler = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/pairing/transpiler" }
# openvm-platform = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/toolchain/platform" }
# openvm-poseidon2-air = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/circuits/poseidon2-air" }
# openvm-recursion-circuit = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/recursion" }
# openvm-recursion-circuit-derive = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/recursion/derive" }
# openvm-rv32-adapters = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/rv32-adapters" }
# openvm-rv32im-circuit = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/rv32im/circuit" }
# openvm-rv32im-guest = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/rv32im/guest" }
# openvm-rv32im-transpiler = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/rv32im/transpiler" }
# openvm-sdk = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/sdk" }
# openvm-sdk-config = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/sdk-config" }
# openvm-sha2 = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/guest-libs/sha2" }
# openvm-sha2-air = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/circuits/sha2-air" }
# openvm-sha2-circuit = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/sha2/circuit" }
# openvm-sha2-guest = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/sha2/guest" }
# openvm-sha2-transpiler = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/extensions/sha2/transpiler" }
# openvm-static-verifier = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/static-verifier" }
# openvm-transpiler = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/toolchain/transpiler" }
# openvm-verify-stark-host = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/crates/verify" }
# p256 = { path = "/home/allanl/Programs/openvm-worktree/no_bn254_root/guest-libs/p256" }
