[workspace]
members = [
  "bin/reth-benchmark",
  "bin/reth-verify",
  # "bin/static-verifier-tracegen",
  # "bin/static-verifier-tracegen-arithonly",
  # "bin/static-verifier-ir",
  # "bin/bn254-perf",
  "crates/mpt",
  "crates/revm-crypto",
  "crates/stateless-executor",
  "crates/chainspec",
  "crates/stateless-witness",
  "crates/mpt-tools",
  "crates/rpc-proxy",
  "crates/curve-utils",
  "crates/kzg",
  "crates/kzg/tests/programs/verify_kzg",
]
exclude = ["openvm", "halo2-gpu", "halo2", "halo2-lib"]
resolver = "3"

[workspace.package]
version = "0.4.0"
repository = "https://github.com/axiom-crypto/openvm-eth"
homepage = "https://github.com/axiom-crypto/openvm-eth"
edition = "2024"
exclude = ["**/target"]
rust-version = "1.91.1"
authors = ["me"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Not directly used, just to have rayon feature always
hashbrown = { version = "0.15.4", features = ["rayon"] }
eyre = "0.6"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
tokio = { version = "1.44.2", default-features = false, features = [
  "rt",
  "rt-multi-thread",
] }
serde_json = "1.0.110"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = "3.13.0"
url = "2.3"
thiserror = "2.0.12"
hex-literal = "1.0.0"
rayon = "1.10.0"
bincode = { version = "2.0.1", default-features = false, features = [
  "derive",
  "alloc",
  "serde",
] }
toml = "0.9.2"
smallvec = "1.13"
bumpalo = "3.19.0"
bytes = "1"
bitcode = { version = "0.6.5", default-features = false, features = ["serde"] }
itertools = "0.14"
actix-web = "4"
reqwest = "0.12.20"
tracing-actix-web = "0.7"
clap = "4.5.54"
tower = "0.5"
metrics = "0.24"
zstd = { version = "0.13", default-features = false }

# workspace
openvm-curve-utils = { path = "./crates/curve-utils", default-features = false }
openvm-kzg = { path = "./crates/kzg", default-features = false }
openvm-mpt = { path = "./crates/mpt" }
openvm-revm-crypto = { path = "./crates/revm-crypto" }
openvm-stateless-executor = { path = "./crates/stateless-executor" }
openvm-chainspec = { path = "./crates/chainspec" }
# workspace (host only)
openvm-stateless-witness = { path = "./crates/stateless-witness", default-features = false }
openvm-rpc-proxy = { path = "./crates/rpc-proxy" }
openvm-reth-benchmark = { path = "./bin/reth-benchmark", default-features = false }

# reth
reth-primitives-traits = { version = "=0.3.0", default-features = false }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v2.1.0", default-features = false }

# revm
revm = { version = "=38.0.0", features = ["serde"], default-features = false }
revm-primitives = { version = "=23.0.0", default-features = false }

# alloy
alloy-chains = { version = "=0.2.33", default-features = false }
alloy-json-rpc = { version = "=2.0.0", default-features = false }
alloy-primitives = { version = "=1.5.6", default-features = false }
alloy-rlp = { version = "=0.3.13", default-features = false, features = [
  "core-net",
] }
alloy-trie = { version = "=0.9.4", default-features = false }

alloy-hardforks = { version = "=0.4.7", default-features = false }

alloy = { version = "=2.0.0", default-features = false }
alloy-eips = { version = "=2.0.0", default-features = false }
alloy-consensus = { version = "=2.0.0", default-features = false }
alloy-provider = { version = "=2.0.0", default-features = false }
alloy-rpc-client = { version = "=2.0.0", default-features = false }
alloy-rpc-types = { version = "=2.0.0", default-features = false }
alloy-rpc-types-debug = { version = "=2.0.0", default-features = false }
alloy-transport = { version = "=2.0.0", default-features = false }
alloy-transport-http = { version = "=2.0.0", default-features = false, features = [
  "reqwest-rustls-tls",
] }

openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.3", default-features = false }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.3", default-features = false }
openvm-verify-stark-host = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.3", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.3", default-features = false }
openvm-keccak256 = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.3", default-features = false }
openvm-pairing = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.3", default-features = false, features = [
  "bn254",
  "bls12_381",
] }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.3", default-features = false }
openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256", branch = "develop-v2.0.0-rc.3" }
openvm-p256 = { git = "https://github.com/openvm-org/openvm.git", package = "p256", branch = "develop-v2.0.0-rc.3" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.3", default-features = false }

# openvm (host only)
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.3", default-features = false }
openvm-build = { git = "https://github.com/openvm-org/openvm.git", branch = "develop-v2.0.0-rc.3", default-features = false }
openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", tag = "v2.0.0", default-features = false }
openvm-transpiler = { path = "openvm/crates/toolchain/transpiler", default-features = false }
openvm-static-verifier = { path = "openvm/crates/static-verifier", default-features = false }
openvm-continuations = { path = "openvm/crates/continuations", default-features = false }
halo2-base = { path = "halo2-lib/halo2-base", default-features = false }

# crates/kzg
hex = { version = "0.4.3", default-features = false }
bls12_381 = { version = "0.8.0", default-features = false, features = [
  "groups",
  "pairings",
  "alloc",
] }
spin = { version = "0.10.0", default-features = false, features = ["once"] }
serde-big-array = { version = "0.5.1", default-features = false }
serde_yaml = { version = "0.9", default-features = false }

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[profile.release]
lto = "thin"

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"
incremental = true
codegen-units = 256
lto = false

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3

# Profile with debugging symbols for memory profiling
[profile.bench-with-debug]
inherits = "release"
debug = 1

[patch."https://github.com/axiom-crypto/snark-verifier.git"]
snark-verifier-sdk = { path = "snark-verifier/snark-verifier-sdk" }
snark-verifier = { path = "snark-verifier/snark-verifier" }

[patch."https://github.com/axiom-crypto/halo2-gpu.git"]
halo2-axiom-gpu = { path = "halo2-gpu/halo2_proofs" }

[patch."https://github.com/axiom-crypto/halo2.git"]
halo2-axiom = { path = "halo2/halo2_proofs" }

[patch."https://github.com/axiom-crypto/halo2-lib.git"]
halo2-base = { path = "halo2-lib/halo2-base" }
halo2-ecc = { path = "halo2-lib/halo2-ecc" }

[patch.crates-io]
halo2-base = { path = "halo2-lib/halo2-base" }
halo2-ecc = { path = "halo2-lib/halo2-ecc" }
halo2-axiom = { path = "halo2/halo2_proofs" }

[patch."https://github.com/openvm-org/openvm.git"]
# crates/toolchain
openvm = { path = "openvm/crates/toolchain/openvm" }
openvm-build = { path = "openvm/crates/toolchain/build" }
openvm-custom-insn = { path = "openvm/crates/toolchain/custom_insn" }
openvm-instructions = { path = "openvm/crates/toolchain/instructions" }
openvm-instructions-derive = { path = "openvm/crates/toolchain/instructions/derive" }
openvm-macros-common = { path = "openvm/crates/toolchain/macros" }
openvm-platform = { path = "openvm/crates/toolchain/platform" }
openvm-transpiler = { path = "openvm/crates/toolchain/transpiler" }
# crates
openvm-circuit = { path = "openvm/crates/vm" }
openvm-circuit-derive = { path = "openvm/crates/vm/derive" }
openvm-circuit-primitives = { path = "openvm/crates/circuits/primitives" }
openvm-circuit-primitives-derive = { path = "openvm/crates/circuits/primitives/derive" }
openvm-mod-circuit-builder = { path = "openvm/crates/circuits/mod-builder" }
openvm-poseidon2-air = { path = "openvm/crates/circuits/poseidon2-air" }
openvm-sha2-air = { path = "openvm/crates/circuits/sha2-air" }
openvm-continuations = { path = "openvm/crates/continuations" }
openvm-prof = { path = "openvm/crates/prof" }
openvm-recursion-circuit = { path = "openvm/crates/recursion" }
openvm-recursion-circuit-derive = { path = "openvm/crates/recursion/derive" }
openvm-sdk = { path = "openvm/crates/sdk" }
openvm-sdk-config = { path = "openvm/crates/sdk-config" }
openvm-static-verifier = { path = "openvm/crates/static-verifier" }
openvm-verify-stark-host = { path = "openvm/crates/verify" }
# extensions
openvm-algebra-circuit = { path = "openvm/extensions/algebra/circuit" }
openvm-algebra-complex-macros = { path = "openvm/extensions/algebra/complex-macros" }
openvm-algebra-guest = { path = "openvm/extensions/algebra/guest" }
openvm-algebra-moduli-macros = { path = "openvm/extensions/algebra/moduli-macros" }
openvm-algebra-transpiler = { path = "openvm/extensions/algebra/transpiler" }
openvm-bigint-circuit = { path = "openvm/extensions/bigint/circuit" }
openvm-bigint-guest = { path = "openvm/extensions/bigint/guest" }
openvm-bigint-transpiler = { path = "openvm/extensions/bigint/transpiler" }
openvm-deferral-circuit = { path = "openvm/extensions/deferral/circuit" }
openvm-deferral-guest = { path = "openvm/extensions/deferral/guest" }
openvm-deferral-transpiler = { path = "openvm/extensions/deferral/transpiler" }
openvm-ecc-circuit = { path = "openvm/extensions/ecc/circuit" }
openvm-ecc-guest = { path = "openvm/extensions/ecc/guest" }
openvm-ecc-sw-macros = { path = "openvm/extensions/ecc/sw-macros" }
openvm-ecc-transpiler = { path = "openvm/extensions/ecc/transpiler" }
openvm-keccak256-circuit = { path = "openvm/extensions/keccak256/circuit" }
openvm-keccak256-guest = { path = "openvm/extensions/keccak256/guest" }
openvm-keccak256-transpiler = { path = "openvm/extensions/keccak256/transpiler" }
openvm-pairing-circuit = { path = "openvm/extensions/pairing/circuit" }
openvm-pairing-guest = { path = "openvm/extensions/pairing/guest" }
openvm-pairing-transpiler = { path = "openvm/extensions/pairing/transpiler" }
openvm-rv32-adapters = { path = "openvm/extensions/rv32-adapters" }
openvm-rv32im-circuit = { path = "openvm/extensions/rv32im/circuit" }
openvm-rv32im-guest = { path = "openvm/extensions/rv32im/guest" }
openvm-rv32im-transpiler = { path = "openvm/extensions/rv32im/transpiler" }
openvm-sha2-circuit = { path = "openvm/extensions/sha2/circuit" }
openvm-sha2-guest = { path = "openvm/extensions/sha2/guest" }
openvm-sha2-transpiler = { path = "openvm/extensions/sha2/transpiler" }
# guest-libs
openvm-ff-derive = { path = "openvm/guest-libs/ff_derive" }
openvm-keccak256 = { path = "openvm/guest-libs/keccak256" }
openvm-pairing = { path = "openvm/guest-libs/pairing" }
openvm-sha2 = { path = "openvm/guest-libs/sha2" }
openvm-verify-stark-circuit = { path = "openvm/guest-libs/verify-stark/circuit" }
openvm-verify-stark-guest = { path = "openvm/guest-libs/verify-stark/guest" }
k256 = { path = "openvm/guest-libs/k256" }
p256 = { path = "openvm/guest-libs/p256" }
