[package]
name = "openvm-mpt"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
exclude.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
smallvec.workspace = true
bumpalo = { workspace = true, features = ["collections"] }
bytes.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-rlp.workspace = true
alloy-trie.workspace = true

# `witness` feature only
alloy-consensus = { workspace = true, optional = true }
reth-evm = { workspace = true, optional = true }
itertools = { workspace = true, optional = true }

[dev-dependencies]
hex-literal.workspace = true

[lints]
workspace = true

[features]
default = []
host = []
# Enables the `witness` module (`WitnessDb` / `WitnessInput`), which pulls in `reth-evm` and
# `alloy-consensus`. Kept out of the default build so lean MPT consumers don't take those deps.
witness = ["dep:alloy-consensus", "dep:reth-evm", "dep:itertools"]
