[package]
name = "openvm-revm-crypto"
description = "OpenVM REVM and Alloy Crypto Provider Library"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# revm
revm.workspace = true

# alloy
alloy-primitives = { workspace = true, features = ["map-foldhash"] }
alloy-consensus = { workspace = true, features = ["crypto-backend"] }

# OpenVM dependencies for optimized crypto (only needed when running in zkvm)
openvm-curve-utils = { workspace = true, features = ["bn254", "bls12_381"] }
openvm-ecc-guest = { workspace = true }
openvm-sha2 = { workspace = true }
openvm-pairing = { workspace = true, features = ["bn254", "bls12_381"] }
openvm-k256 = { workspace = true }
openvm-p256 = { workspace = true }
openvm-kzg = { workspace = true, features = ["use-intrinsics"] }
openvm-keccak256 = { workspace = true }
aurora-engine-modexp = { version = "1.2.0", default-features = false }

[target.'cfg(all(target_arch = "riscv64", any(target_os = "none", target_os = "openvm")))'.dependencies]
revm-primitives = { workspace = true, features = ["hashbrown"] }
alloy-primitives = { workspace = true, features = ["native-keccak"] }

[target.'cfg(not(any(target_os = "none", target_os = "openvm")))'.dependencies]
openvm-sha2 = { workspace = true, features = ["import_sha2"] }
openvm-keccak256 = { workspace = true, features = ["tiny_keccak"] }

[features]
default = []
std = []

[package.metadata.cargo-shear]
ignored = ["revm-primitives"]
