[package]
name = "verify-kzg-program"
version = "0.1.0"
edition = "2021"

[dependencies]
openvm.workspace = true
openvm-algebra-guest.workspace = true
openvm-ecc-guest.workspace = true
openvm-pairing = { workspace = true, features = ["bls12_381"] }

openvm-kzg.workspace = true

[package.metadata.cargo-machete]
ignored = ["openvm-algebra-guest", "openvm-ecc-guest"]

[package.metadata.cargo-shear]
ignored = ["openvm-algebra-guest", "openvm-ecc-guest"]

[features]
default = ["openvm-kzg/use-intrinsics"]
